Initial sidebar styling

--- a/index.html
+++ b/index.html
@@ -8,29 +8,31 @@
 
 </head>
 <body>
-    <div class="sidebar">
-        <p>Dashboard</p>
-        <ul>
-            <li>Home</li>
-            <li>Profile</li>
-            <li>Messages</li>
-            <li>History</li>
-            <li>Tasks</li>
-            <li>Communities</li>
-        </ul>
-        <ul>
-            <li>Settings</li>
-            <li>Support</li>
-            <li>Privacy</li>
-        </ul>
-    </div>
-
-    <div class="rightContainer">
-        <div class="header">
-            <p>Search bar</p>
+    <div class="dashboard">
+        
+        <div class="sidebar">
+            <p>Dashboard</p>
+            <ul>
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+            </ul>
+            <ul>
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
         </div>
-        <div class="mainContent">
-            <p>Your projects.</p>
+        <div class="rightContainer">
+            <div class="header">
+                <p>Search bar</p>
+            </div>
+            <div class="mainContent">
+                <p>Your projects.</p>
+            </div>
         </div>
     </div>
 
