Add basic scaffolding of header and main content area

--- a/index.html
+++ b/index.html
@@ -28,10 +28,50 @@
         </div>
         <div class="rightContainer">
             <div class="header">
-                <p>Search bar</p>
+                <div class="topHeader">
+                    <div class="search">
+                        <p>Search bar</p>
+                    </div>
+                    
+                    <div class="profile">
+                        <p>Morgan Oakley</p>
+                    </div>
+                </div>
+                <div class="bottomHeader">
+
+                    <div class="welcome">
+                        <p>Hi there, Morgan Oakley(@morgen)</p>
+                    </div>
+                    <div class="buttons">
+                        <uL>
+                            <li>New</li>
+                            <li>Upload</li>
+                            <li>Share</li>
+                        </uL>
+                    </div>
+                </div>
             </div>
             <div class="mainContent">
-                <p>Your projects.</p>
+                <div class="leftContent">
+                    <p>Your projects.</p>
+                </div>
+                <div class="rightContent">
+                    <p>Announcements</p>
+                    <div class="announcementCardContainer">
+                            <ul>
+                                <li>Site Maintenance</li>
+                                <li>Community Share Day</li>
+                                <li>Updated Privacy Policy</li>
+                            </ul>
+                    </div>
+                    <p>Trending</p>
+                    <div class="trendingCardContainer">
+                        <ul>
+                            <li>@tegan</li>
+                            <li>@morgan</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
