Add dummmy content and basic styling to header

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                 <div class="bottomHeader">
 
                     <div class="welcome">
-                        <p>Hi there, Morgan Oakley(@morgen)</p>
+                        <div class="greeting">
+                            <p>Hi there, </p>
+                        </div>
+                        <p>Morgan Oakley(@morgen)</p>
                     </div>
                     <div class="buttons">
                         <uL>
