Add dummy content to main content area, style project cards

--- a/index.html
+++ b/index.html
@@ -56,7 +56,97 @@
             </div>
             <div class="mainContent">
                 <div class="leftContent">
-                    <p>Your projects.</p>
+                    <p>Your projects</p>
+                    <div class="projectContainer">
+                        <div class="projectCard">
+                             <div class="title">
+                                <p>Super Cool Project</p>
+                             </div>
+                             <div class="body">
+                                This is the coolesest project basically ever made.
+                             </div>
+                             <div class="dummyIcons">
+                                <p>:)</p>
+                             </div>
+                        </div>
+                        <div class="projectCard">
+                             <div class="title">
+                                <p>Not Very Interesting Project</p>
+                             </div>
+                             <div class="body">
+                                This is the coolesest project basically ever made.
+                             </div>
+                             <div class="dummyIcons">
+                                <p>:)</p>
+                             </div>
+                        </div>
+                        <div class="projectCard">
+                             <div class="title">
+                                <p>Super Cool Project</p>
+                             </div>
+                             <div class="body">
+                                This is the coolesest project basically ever made.
+                             </div>
+                             <div class="dummyIcons">
+                                <p>:)</p>
+                             </div>
+                        </div>
+                        <div class="projectCard">
+                             <div class="title">
+                                <p>Not Very Interesting Project</p>
+                             </div>
+                             <div class="body">
+                                This is the coolesest project basically ever made.
+                             </div>
+                             <div class="dummyIcons">
+                                <p>:)</p>
+                             </div>
+                        </div>
+                        <div class="projectCard">
+                             <div class="title">
+                                <p>Super Cool Project</p>
+                             </div>
+                             <div class="body">
+                                This is the coolesest project basically ever made.
+                             </div>
+                             <div class="dummyIcons">
+                                <p>:)</p>
+                             </div>
+                        </div>
+                        <div class="projectCard">
+                             <div class="title">
+                                <p>Not Very Interesting Project</p>
+                             </div>
+                             <div class="body">
+                                This is the coolesest project basically ever made.
+                             </div>
+                             <div class="dummyIcons">
+                                <p>:)</p>
+                             </div>
+                        </div>
+                        <div class="projectCard">
+                             <div class="title">
+                                <p>Super Cool Project</p>
+                             </div>
+                             <div class="body">
+                                This is the coolesest project basically ever made.
+                             </div>
+                             <div class="dummyIcons">
+                                <p>:)</p>
+                             </div>
+                        </div>
+                        <div class="projectCard">
+                             <div class="title">
+                                <p>Not Very Interesting Project</p>
+                             </div>
+                             <div class="body">
+                                This is the coolesest project basically ever made.
+                             </div>
+                             <div class="dummyIcons">
+                                <p>:)</p>
+                             </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="rightContent">
                     <p>Announcements</p>
