Finish adding dummy html content and first pass styling

--- a/index.html
+++ b/index.html
@@ -124,47 +124,71 @@
                                 <p>:)</p>
                              </div>
                         </div>
-                        <div class="projectCard">
-                             <div class="title">
-                                <p>Super Cool Project</p>
-                             </div>
-                             <div class="body">
-                                This is the coolesest project basically ever made.
-                             </div>
-                             <div class="dummyIcons">
-                                <p>:)</p>
-                             </div>
-                        </div>
-                        <div class="projectCard">
-                             <div class="title">
-                                <p>Not Very Interesting Project</p>
-                             </div>
-                             <div class="body">
-                                This is the coolesest project basically ever made.
-                             </div>
-                             <div class="dummyIcons">
-                                <p>:)</p>
-                             </div>
-                        </div>
+
                     </div>
                 </div>
                 <div class="rightContent">
                     <p>Announcements</p>
                     <div class="announcementCardContainer">
-                            <ul>
-                                <li>Site Maintenance</li>
-                                <li>Community Share Day</li>
-                                <li>Updated Privacy Policy</li>
-                            </ul>
+                        <div class="announcementCard">
+                            <div class="announcementTitle">
+                                <p>Site Maintenance</p>
+                            </div>
+                            <div class="announcementBody">
+                                <p>uh oh uh yeah uh nooo</p>
+                            </div>
+                            <hr>
+                        </div>
+                        <div class="announcementCard">
+                            <div class="announcementTitle">
+                                <p>it blew up</p>
+                            </div>
+                            <div class="announcementBody">
+                                <p>uh oh uh yeah uh nooo</p>
+                            </div>
+                            <hr>
+                        </div>
+                        <div class="announcementCard">
+                            <div class="announcementTitle">
+                                <p>Oopsie</p>
+                            </div>
+                            <div class="announcementBody">
+                                <p>uh oh uh yeah uh nooo</p>
+                            </div>
+                            <hr>
+                        </div>
+                        
+                            
                     </div>
                     <p>Trending</p>
                     <div class="trendingCardContainer">
-                        <ul>
-                            <li>@tegan</li>
-                            <li>@morgan</li>
-                        </ul>
+                        <div class="profileCard">
+                            <div class="profilePicture">
+                                <p>>.<</p>
+                            </div>
+                            <div class="profileText">
+                                    <div class="handle">
+                                        <p>@tegan</p>
+                                    </div>
+                                    <div class="username">
+                                        <p>World Peace Builder</p>
+                                    </div>
+                            </div>
+                        </div>
+                        <div class="profileCard">
+                            <div class="profilePicture">
+                                <p>>.<</p>
+                            </div>
+                            <div class="profileText">
+                                    <div class="handle">
+                                        <p>@tegan</p>
+                                    </div>
+                                    <div class="username">
+                                        <p>World Peace Builder</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
+
             </div>
         </div>
     </div>
