--- a/index.html
+++ b/index.html
@@ -60,20 +60,29 @@
             <div class="header">
                 <div class="topHeader">
                     <div class="search">
-                        <p>Search bar</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1.5em"><title>magnify</title><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg>
+                        <p></p>
                     </div>
                     
                     <div class="profile">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1em"><title>bell</title><path d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21" /></svg>
+                        <img src="assets/cat.jpg">
                         <p>Morgan Oakley</p>
                     </div>
                 </div>
                 <div class="bottomHeader">
 
                     <div class="welcome">
-                        <div class="greeting">
-                            <p>Hi there, </p>
+                        <div class="profileLarge">
+                            <img src="assets/cat.jpg">
                         </div>
-                        <p>Morgan Oakley(@morgen)</p>
+                        <div class="welcomeText">
+                            
+                            <div class="greeting">
+                                <p>Hi there, </p>
+                            </div>
+                            <p>Morgan Oakley(@morgen)</p>
+                        </div>
                     </div>
                     <div class="buttons">
                         <uL>
