Add images and style trending card

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div class="trendingCardContainer">
                         <div class="profileCard">
                             <div class="profilePicture">
-                                <p>>.<</p>
+                                <img src="assets/cat2.jpg">
                             </div>
                             <div class="profileText">
                                     <div class="handle">
@@ -227,7 +227,20 @@
                         </div>
                         <div class="profileCard">
                             <div class="profilePicture">
-                                <p>>.<</p>
+                                <img src="assets/cat3.jpg">
+                            </div>
+                            <div class="profileText">
+                                    <div class="handle">
+                                        <p>@tegan</p>
+                                    </div>
+                                    <div class="username">
+                                        <p>World Peace Builder</p>
+                                    </div>
+                            </div>
+                        </div>
+                        <div class="profileCard">
+                            <div class="profilePicture">
+                                <img src="assets/cat4.gif">
                             </div>
                             <div class="profileText">
                                     <div class="handle">
