Add profile pictures to trending and touch up styling

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="profile">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1em"><title>bell</title><path d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21" /></svg>
                         <img src="assets/cat.jpg">
-                        <p>Morgan Oakley</p>
+                        <p>Mr. Peanutbutter</p>
                     </div>
                 </div>
                 <div class="bottomHeader">
@@ -81,7 +81,7 @@
                             <div class="greeting">
                                 <p>Hi there, </p>
                             </div>
-                            <p>Morgan Oakley(@morgen)</p>
+                            <p>Mr. Peanutbutter(@pntbtr)</p>
                         </div>
                     </div>
                     <div class="buttons">
@@ -99,10 +99,10 @@
                     <div class="projectContainer">
                         <div class="projectCard">
                              <div class="title">
-                                <p>Super Cool Project</p>
+                                <p>Scratch couch</p>
                              </div>
                              <div class="body">
-                                This is the coolesest project basically ever made.
+                                <p>A post modern comment on commercialisation(ongoing).</p>
                              </div>
                              <div class="dummyIcons">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1em"><title>star-outline</title><path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" /></svg>
@@ -112,10 +112,10 @@
                         </div>
                         <div class="projectCard">
                              <div class="title">
-                                <p>Super Cool Project</p>
+                                <p>Take a nap</p>
                              </div>
                              <div class="body">
-                                This is the coolesest project basically ever made.
+                                <p>Zzzzzzzzzzzzz.</p>
                              </div>
                              <div class="dummyIcons">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1em"><title>star-outline</title><path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" /></svg>
@@ -125,10 +125,10 @@
                         </div>
                         <div class="projectCard">
                              <div class="title">
-                                <p>Super Cool Project</p>
+                                <p>Eat human food.</p>
                              </div>
                              <div class="body">
-                                This is the coolesest project basically ever made.
+                                <p>I don't know why they keep it out of my reach.</p>
                              </div>
                              <div class="dummyIcons">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1em"><title>star-outline</title><path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" /></svg>
@@ -138,10 +138,10 @@
                         </div>
                         <div class="projectCard">
                              <div class="title">
-                                <p>Super Cool Project</p>
+                                <p>Poop next to litterbox.</p>
                              </div>
                              <div class="body">
-                                This is the coolesest project basically ever made.
+                                <p>It's nothing personal, just business.</p>
                              </div>
                              <div class="dummyIcons">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1em"><title>star-outline</title><path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" /></svg>
@@ -151,10 +151,10 @@
                         </div>
                         <div class="projectCard">
                              <div class="title">
-                                <p>Super Cool Project</p>
+                                <p>Meow</p>
                              </div>
                              <div class="body">
-                                This is the coolesest project basically ever made.
+                                <p>Nuff said.</p>
                              </div>
                              <div class="dummyIcons">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1em"><title>star-outline</title><path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" /></svg>
@@ -164,10 +164,10 @@
                         </div>
                         <div class="projectCard">
                              <div class="title">
-                                <p>Super Cool Project</p>
+                                <p>Teach dog to steal.</p>
                              </div>
                              <div class="body">
-                                This is the coolesest project basically ever made.
+                                <p>We know not the limits of our own minds.</p>
                              </div>
                              <div class="dummyIcons">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1em"><title>star-outline</title><path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z" /></svg>
@@ -183,28 +183,28 @@
                     <div class="announcementCardContainer">
                         <div class="announcementCard">
                             <div class="announcementTitle">
-                                <p>Site Maintenance</p>
+                                <p>I am hungry.</p>
                             </div>
                             <div class="announcementBody">
-                                <p>uh oh uh yeah uh nooo</p>
+                                <p>Give me food please.</p>
                             </div>
                             <hr>
                         </div>
                         <div class="announcementCard">
                             <div class="announcementTitle">
-                                <p>it blew up</p>
+                                <p>There is a bird outside.</p>
                             </div>
                             <div class="announcementBody">
-                                <p>uh oh uh yeah uh nooo</p>
+                                <p>Am I the only one freaking out???</p>
                             </div>
                             <hr>
                         </div>
                         <div class="announcementCard">
                             <div class="announcementTitle">
-                                <p>Oopsie</p>
+                                <p>We are out of pringles.</p>
                             </div>
                             <div class="announcementBody">
-                                <p>uh oh uh yeah uh nooo</p>
+                                <p>I don't know who took them.</p>
                             </div>
                         </div>
                         
@@ -218,7 +218,7 @@
                             </div>
                             <div class="profileText">
                                     <div class="handle">
-                                        <p>@tegan</p>
+                                        <p>@bob</p>
                                     </div>
                                     <div class="username">
                                         <p>World Peace Builder</p>
@@ -231,10 +231,10 @@
                             </div>
                             <div class="profileText">
                                     <div class="handle">
-                                        <p>@tegan</p>
+                                        <p>@ratcat</p>
                                     </div>
                                     <div class="username">
-                                        <p>World Peace Builder</p>
+                                        <p>Professional Sniffer</p>
                                     </div>
                             </div>
                         </div>
@@ -244,10 +244,10 @@
                             </div>
                             <div class="profileText">
                                     <div class="handle">
-                                        <p>@tegan</p>
+                                        <p>@ronaldreagen</p>
                                     </div>
                                     <div class="username">
-                                        <p>World Peace Builder</p>
+                                        <p>Trickle Down Some Treats</p>
                             </div>
                         </div>
                     </div>
